@@ -1,6 +1,0 @@
-Makefile.in
-Makefile
-.deps
-_libs
-.libs
-borderaverage
