@@ -13,6 +13,7 @@ autocrop
 autostretch_hsv
 blinds
 blur
+borderaverage
 bumpmap
 bz2
 c_astretch
